2010-11-10  Miklos Szeredi <miklos@szeredi.hu>

	* Add new write_buf() method to the highlevel API.  Similarly to
	the lowlevel write_buf() method, this allows implementing zero
	copy writes.

	* Add a new read_buf() method to the highlevel API.  This allows
	returning a generic buffer from the read method, which in turn
	allows zero copy reads.

2010-11-08  Miklos Szeredi <miklos@szeredi.hu>

	* Fix check for read-only fs in mtab update

	* Open /dev/null for write instead of read for redirecting stdout
	and stderr

	* If umount(8) supports --fake and --no-canonicalize (util-linux-ng
	version 2.18 or later), and umount(2) supports the
	UMOUNT_NOFOLLOW flag (linux kernel version 2.6.35 or later)  then,
	"fusermount -u" will call the umount(2) system call and use
	"umount --fake ..." to update /etc/mtab

	* Added --disable-legacy-umount option to configure.  This
	disables the runtime checking of umount(8) version.  When built
	with this option then "fusermount -u" will fail if umount(8)
	doesn't support the --fake and --no-canonicalize options.

	* Fix fuse_buf_copy() if already at the end of the buffers

	* Add new ->write_buf() method to low level interface.  This
	allows passig a generic buffer, either containing a memory buffer
	or a file descriptor.  This allows implementing zero copy writes.

	* Add fuse_session_receive_buf() and fuse_session_process_buf()
	which may be used in event loop implementations to replace
	fuse_chan_recv() and fuse_session_process() respectively.

	* Remove unnecessary restoring of current working directory in
	"fusermount -u"

	* Add ctx->pid to debug output

	* Fix st_nlink value in high level lib if file is unlinked but
	still open

	* libfuse: add store request.  Request data to be stored in the
	kernel buffers for a given inode.

	* libfuse: add retrieve request.  Retrieve data stored in the
	kernel buffers for a given inode.

2010-10-14  Miklos Szeredi <miklos@szeredi.hu>
